--- a/views/admin/posts.ejs
+++ b/views/admin/posts.ejs
@@ -13,23 +13,22 @@
         <!-- show when multiple checked -->
         <a class="btn btn-danger btn-sm" href="javascript:;" style="display: none">批量删除</a>
         <form class="form-inline">
-          <select name="" class="form-control input-sm">
-            <option value="">所有分类</option>
-            <option value="">未分类</option>
+          <select name="" class="form-control input-sm cateSelector">
+            
           </select>
-          <select name="" class="form-control input-sm">
-            <option value="">所有状态</option>
-            <option value="">草稿</option>
-            <option value="">已发布</option>
+          <select name="" class="form-control input-sm statuSelector">
+            <option value="all">所有状态</option>
+          <option value="drafted">草稿</option>
+          <option value="published">已发布</option>
           </select>
           <button class="btn btn-default btn-sm">筛选</button>
         </form>
         <ul class="pagination pagination-sm pull-right">
-          <li><a href="#">上一页</a></li>
+          <!-- <li><a href="#">上一页</a></li>
           <li><a href="#">1</a></li>
           <li><a href="#">2</a></li>
           <li><a href="#">3</a></li>
-          <li><a href="#">下一页</a></li>
+          <li><a href="#">下一页</a></li> -->
         </ul>
       </div>
       <table class="table table-striped table-bordered table-hover">
@@ -51,7 +50,7 @@
     </div>
     <%-include('./template/template-aside.ejs');%>
     <%-include('./template/admin-js.ejs');%>
-
+    <script src="../../assets/vendors/bootstrappaginator/bootstrap-paginator.min.js"></script>
     <script src='../../assets/js/admin-posts.js'></script>
 
 
