完成文章的渲染筛选

--- a/views/admin/posts.ejs
+++ b/views/admin/posts.ejs
@@ -21,7 +21,7 @@
           <option value="drafted">草稿</option>
           <option value="published">已发布</option>
           </select>
-          <button class="btn btn-default btn-sm">筛选</button>
+          <input class="btn btn-default btn-sm " id="haha" type="button" value="筛选"></input>
         </form>
         <ul class="pagination pagination-sm pull-right">
           <!-- <li><a href="#">上一页</a></li>
