--- a/views/admin/post-add.ejs
+++ b/views/admin/post-add.ejs
@@ -10,6 +10,8 @@
         <strong>错误！</strong>发生XXX错误
       </div> -->
       <form class="row">
+        <!-- 表单的隐藏域 -->
+        <input type="hidden" name="feature" value="" id="hideimg">
         <div class="col-md-9">
           <div class="form-group">
             <label for="title">标题</label>
@@ -17,7 +19,7 @@
           </div>
           <div class="form-group">
             <label for="content">标题</label>
-            <textarea id="content" class="form-control input-lg" name="content" cols="30" rows="10" placeholder="内容"></textarea>
+            <textarea id="description" class="form-control input-lg" name="content" cols="30" rows="10" placeholder="内容"></textarea>
           </div>
         </div>
         <div class="col-md-3">
@@ -29,12 +31,12 @@
           <div class="form-group">
             <label for="feature">特色图像</label>
             <!-- show when image chose -->
-            <img class="help-block thumbnail" style="display: none">
+            <img class="help-block thumbnail" style="display: none"  src="">
             <input id="feature" class="form-control" name="feature" type="file">
           </div>
           <div class="form-group">
             <label for="category">所属分类</label>
-            <select id="category" class="form-control" name="category">
+            <select id="category" class="form-control" name="category_id">
               <option value="1">未分类</option>
               <option value="2">潮生活</option>
             </select>
@@ -51,11 +53,14 @@
             </select>
           </div>
           <div class="form-group">
-            <button class="btn btn-primary" type="submit">保存</button>
+            <input class="btn btn-primary" type="button" id="postsave"  value="保存"></button>
           </div>
         </div>
       </form>
     </div>
     <%-include('./template/template-aside.ejs');%>
     <%-include('./template/admin-js.ejs');%>
+    <script src="../../assets/vendors/ckeditor/ckeditor.js"></script>
+    <script src="../../assets/js/post-add.js"></script>
+
     
