--- a/views/admin/post-add.ejs
+++ b/views/admin/post-add.ejs
@@ -12,6 +12,7 @@
       <form class="row">
         <!-- 表单的隐藏域 -->
         <input type="hidden" name="feature" value="" id="hideimg">
+        <input type="hidden" name="id" value="" id="postid">
         <div class="col-md-9">
           <div class="form-group">
             <label for="title">标题</label>
@@ -37,8 +38,7 @@
           <div class="form-group">
             <label for="category">所属分类</label>
             <select id="category" class="form-control" name="category_id">
-              <option value="1">未分类</option>
-              <option value="2">潮生活</option>
+
             </select>
           </div>
           <div class="form-group">
